--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,14 +1,26 @@
 apply plugin: 'com.android.application'
 
 android {
+    signingConfigs {
+        debug {
+            storeFile file('D:\\Kuliah\\Semester 5\\RPL\\upload-keystore.jks')
+            storePassword 'keystore123'
+            keyAlias = 'topidana'
+            keyPassword 'keystore1234'
+        }
+    }
+    lintOptions {
+        checkReleaseBuilds false
+    }
+
     compileSdkVersion 29
     buildToolsVersion "29.0.2"
     defaultConfig {
-        applicationId "com.example.topidana"
+        applicationId "com.myapp.topidana"
         minSdkVersion 15
         targetSdkVersion 29
-        versionCode 1
-        versionName "1.0"
+        versionCode 2
+        versionName "1.2"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
